--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -75,7 +75,7 @@
                     <br />
                     <button type="button" class="btn btn-primary" [hidden]="formControlModel.showTestCase" (click)="formControlModel.showTestCase=true;addTestCases()">Add Test Case</button>
                     <md2-accordion *ngFor="let testCase of testCases;let i = index">
-                        <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showTestCase" [active]="true">
+                        <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showTestCase" [active]="!isQuestionEdited">
                             <md2-accordion-header class="collapsible-header clearfix">
                                 <div class="title-info h2 pull-left">
                                     <span>Type: {{getTestCaseString(testCase.testCaseType)}}</span>
