--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -19,14 +19,14 @@
           <label>Start Date & Time</label>
           <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
           <div class="errors-container">
-            <span class="error-msg small-width" *ngIf="validStartDate">Start Date and Time must be greater than current Date and Time</span>
+            <span class="error-msg small-width" *ngIf="validStartDate">Start DateTime must be greater than Current DateTime</span>
           </div>
         </div>
         <div class="form-group inline-field">
           <label>End Date & Time</label>
           <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.endDate" name="End Date" (mouseup)="isEndDateValid(testDetails.endDate)" />
           <div class="errors-container">
-            <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater then Start Date and Time</span>
+            <span class="error-msg" *ngIf="validEndDate">End DateTime must be greater than Start DateTime</span>
           </div>
         </div>
         <div class="form-group ip-restrictions-field">
