modified setAllCandidateStarred logic, modified routing, modified datatype of total marks, percentage and percentile field of reports model.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -31,7 +31,7 @@
                 <thead>
                     <tr>
                         <th><md-checkbox class="only-checkbox"></md-checkbox></th>
-                        <th><em class="material-icons" [ngClass]="{starred : isAllCandidateStarred}" (click)="setAllCandidatesStarred(testId)">{{headerStarStatus}}</em></th>
+                        <th><em class="material-icons" [ngClass]="{starred : isAllCandidateStarred}" (click)="setAllCandidatesStarred()">{{headerStarStatus}}</em></th>
                         <th class="h5" md2SortBy="firstName">Name</th>
                         <th class="h5" md2SortBy="email">Email</th>
                         <th class="h5" md2SortBy="createdDateTime">Test Date</th>
