--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-launch-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-launch-dialog.html
@@ -7,8 +7,8 @@
     <div class="form-group">
       <label>Global URL</label>
       <div class="url-container">
-        <input type="text" class="form-control" [(ngModel)]="testLink" name="TestLink" id="TestLink" #TestLink onblur="this.select();" />
-        <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" tooltip={{tooltipMessage}} (click)="showTooltipMessage($event,TestLink)" (mouseenter)="changeTooltipMessage()">content_copy</em>
+        <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
+        <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" tooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
       </div>
           <div class="errors-container"></div>
     </div>
