--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -6,15 +6,15 @@
     <md-dialog-content>
         <div class="form-group">
             <label>Section Name</label>
-            <input type="text" class="form-control" id="name" (keyup.enter)="onEnter(category)" [(ngModel)]="category.categoryName" (keyup)="changeErrorMessage()" name="name" #name="ngModel" maxlength="150" placeholder="Ex. General Knowledge" required />
+            <input type="text" class="form-control" id="categoryName" (keyup.enter)="onEnter(category)" [(ngModel)]="category.categoryName" (keyup)="changeErrorMessage()" name="categoryName" #categoryName="ngModel" maxlength="150" placeholder="Ex. General Knowledge" required />
             <div class="errors-container">
                 <span *ngIf="isCategoryNameExist" class="error-msg">{{errorMessage}}</span>
-                <span *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required" class="error-msg">Category Name Required</span>
+                <span *ngIf="categoryName.errors && (categoryName.dirty || categoryName.touched)" [hidden]="!categoryName.errors.required" class="error-msg">Category Name Required</span>
             </div>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" [disabled]="name.errors || isButtonClicked" (click)="addCategory(category)">Create</button>
+        <button type="submit" class="btn btn-primary" [disabled]="categoryName.errors || isButtonClicked" (click)="addCategory(category)">Create</button>
     </md-dialog-actions>
 </div>
