--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -1,4 +1,7 @@
-﻿<div class="test-report">
+﻿<div class="loader-container" *ngIf="loader">
+    <div class="spinner"></div>
+</div>
+<div class="test-report">
     <div class="test-create-header clearfix">
         <div class="container">
             <h1 class="pull-left">
