--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -14,7 +14,7 @@
                     <p class="mb0">{{testAttendee.firstName}}&nbsp;{{testAttendee.lastName}}</p>
                 </div>
                 <div class="display-table-cell text-right">
-                    <button type="button" class="btn btn-primary" (click)="endTest()">End Test</button>
+                    <button type="button" class="btn btn-primary" (click)="endTestButtonClicked()">End Test</button>
                     <br class="hidden-lg" />
                     <h5 class="mlr10">Time Remaining:</h5>
                     <h2 class="mt3">{{timeString}}</h2>
