numberofTestQuestions,numberOfTestSections field added to test.model.ts, displayed test details over question dashboard

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -14,7 +14,7 @@
                             <span>{{category.categoryName}}</span>
                         </div>
                         <div class="pull-right">
-                            <span class="h7 qs-selected">{{category.numberOfSelectedQuestion}}/{{category.questionCount}} question(s) selected</span>
+                            <span class="h7 qs-selected">{{category.numberOfSelectedQuestion}} out of {{category.questionCount}} question(s) selected</span>
                             <span class="collapsible-icon"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
                         </div>
                     </md2-accordion-header>
