Added edit functionality of test according to number of attendees of the test.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
@@ -1,5 +1,8 @@
 ﻿<div class="test-create-steps test-view">
   <div class="test-create-header clearfix">
+    <div class="loader-container" *ngIf="loader">
+      <div class="spinner"></div>
+    </div>
     <div class="container">
       <h1 class="pull-left">
         <span class="test-name">{{testDetails.testName}}</span>
