--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -4,12 +4,15 @@
         <div class="spinner"></div>
     </div>
     <div class="container">
+      <span *ngIf="!isEditTestEnabled">You can not edit on going Test. Click
+        <a [routerLink]="['/tests',testId,'view']">View Test Details</a> to view the details of the Test.
+      </span>
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
             <li *ngFor="let categories of testDetails.categoryAcList"
                 (click)="onSelect(categories)">
                 <label for="{{categories.categoryName}}">
-                    <input type="checkbox" id="" [(ngModel)]="categories.isSelect" />
+                    <input type="checkbox" id="" [(ngModel)]="categories.isSelect"/>
                     <span class="section-box clearfix">
                         <span class="h4 pull-left">{{categories.categoryName}}</span>
                         <em class="material-icons pull-right">check</em>
