--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
@@ -30,14 +30,14 @@
     </div>
     <ng-container *ngFor="let category of testDetails.categoryAcList;let k=index">
       <md2-accordion class="questions-selection" *ngIf="category.isSelect">
-        <md2-accordion-tab class="collapsible-block">
-          <md2-accordion-header class="collapsible-header clearfix" *ngIf="category.isSelect" (click)="getAllquestions(category,k)">
+        <md2-accordion-tab class="collapsible-block" [disabled]="category.isQuestionAbsent">
+          <md2-accordion-header class="collapsible-header clearfix" *ngIf="category.isSelect" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
             <div class="title-info h2 pull-left">
               <span>{{category.categoryName}}</span>
             </div>
             <div class="pull-right">
               <span class="h7 qs-selected">{{category.numberOfSelectedQuestion}} question(s)</span>
-              <span class="collapsible-icon"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
+              <span class="collapsible-icon" *ngIf="!category.isQuestionAbsent"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
             </div>
           </md2-accordion-header>
 
